# private-search-engines

./: Cargo.toml  README.md
src/: cache.rs  lib.rs
src/engines/: brave.rs  duckduckgo.rs  mod.rs
